Changed Base64 code to use a 1.6 compatible library.